# swh2save

./: .gitignore  FORMAT.md  README.md  gen_game_data.py  gen_gamedata.py  heist2save.py  pyproject.toml
swh2save/: __init__.py  cli.py  datafile.py  gamedata.py  gen_gamedata.py  savefile.py
